--- a/style/sty_le1.css
+++ b/style/sty_le1.css
@@ -915,3 +915,13 @@ margin-left: 1125px;
   /*height: auto; /* يحافظ على نسبة العرض والارتفاع */
  /* max-width: 400px; /* أقصى عرض للصورة */
 /*}
+
+
+
+
+img {
+  max-width: 100%; /* التأكد من أن الصورة لا تتجاوز عرض العنصر الحاوي */
+  height: auto; /* الحفاظ على نسبة العرض إلى الارتفاع */
+  display: block; /* إزالة المسافة البيضاء أسفل الصورة */
+  margin: 0 auto; /* محاذاة الصورة في المنتصف */
+}
