--- a/style/sty_le1.css
+++ b/style/sty_le1.css
@@ -915,7 +915,7 @@ margin-left: 1125px;
   /*height: auto; /* يحافظ على نسبة العرض والارتفاع */
  /* max-width: 400px; /* أقصى عرض للصورة */
 /*}
-
+*/
 
 
 
